[gd_scene load_steps=8 format=3 uid="uid://bc80f78mxyrqv"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_lxet5"]
[ext_resource type="AudioStream" uid="uid://dhka0a354kok" path="res://monkeys dancing 4.mp3" id="2_thd8q"]
[ext_resource type="Texture2D" uid="uid://b70w61cts6vrb" path="res://Pixel Adventure 1/Free/Items/pngtree-cartoon-banana-tree-image_16438539.jpg" id="2_yuo1t"]
[ext_resource type="Texture2D" uid="uid://co0hunv4crw83" path="res://Pixel Adventure 1/Free/Items/BanHops.png" id="3_s6j31"]
[ext_resource type="Texture2D" uid="uid://q7583s6nygvw" path="res://Pixel Adventure 1/Free/Items/Start.png" id="4_udh6n"]
[ext_resource type="Texture2D" uid="uid://dwive0g0uj17d" path="res://Pixel Adventure 1/Free/Items/High-Score.png" id="5_kl0jm"]
[ext_resource type="Texture2D" uid="uid://cntsyfmr0x0lc" path="res://Pixel Adventure 1/Free/Items/Quit.png" id="6_yiq8y"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lxet5")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_thd8q")
autoplay = true
parameters/looping = false

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.15712, 2.48421)
texture = ExtResource("2_yuo1t")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 88.0
offset_top = 186.0
offset_right = 555.0
offset_bottom = 260.0
scale = Vector2(2.00329, 2.61642)
texture = ExtResource("3_s6j31")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
offset_left = 406.0
offset_top = 400.0
offset_right = 754.0
offset_bottom = 710.0
scale = Vector2(1.53651, 0.71531)

[node name="Start" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("4_udh6n")
flat = true

[node name="Score" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("5_kl0jm")
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("6_yiq8y")
flat = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Score" to="." method="_on_high_score_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
